--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.13.2",
+    "sass": "1.97.2",
     "vue": "^3.5.25",
     "vue-router": "4.6.4"
   },
